After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725468 - Fix two serious message handling bugs
Fix two serious message handling bugs
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-omx
git master
Other Linux
: Normal critical
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-01 21:34 UTC by deathsimple@vodafone.de
Modified: 2014-07-23 08:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Bugfix. (1.43 KB, patch)
2014-03-01 21:34 UTC, deathsimple@vodafone.de
committed Details | Review

Description deathsimple@vodafone.de 2014-03-01 21:34:44 UTC
Created attachment 270653 [details] [review]
Bugfix.

The attached patch fixes two very basic bugs in the message handling code.

Please review and apply.
Comment 1 Sebastian Dröge (slomo) 2014-03-02 11:10:33 UTC
Ouch... thanks for the patches

commit 8b06b07f6fdff4612d404eb99268c7a7325179b6
Author: Christian König <christian.koenig@amd.com>
Date:   Sat Mar 1 22:28:24 2014 +0100

    omx: fix two serious message handling bugs
    
    Waiting for the next message if we already got one
    is nonsense and can lead to lockups.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725468