omx/gstomx.c
@@ -842,8 +842,7 @@ gst_omx_component_get_state (GstOMXComponent * comp, GstClockTime timeout)
     g_mutex_unlock (&comp->lock);
     if (!g_queue_is_empty (&comp->messages)) {
       signalled = TRUE;
-    }
-    if (timeout == GST_CLOCK_TIME_NONE) {
+    } else if (timeout == GST_CLOCK_TIME_NONE) {
       g_cond_wait (&comp->messages_cond, &comp->messages_lock);
       signalled = TRUE;
     } else {
@@ -1514,8 +1513,7 @@ gst_omx_port_set_flushing (GstOMXPort * port, GstClockTime timeout,
 
       if (!g_queue_is_empty (&comp->messages)) {
         signalled = TRUE;
-      }
-      if (timeout == GST_CLOCK_TIME_NONE) {
+      } else if (timeout == GST_CLOCK_TIME_NONE) {
         g_cond_wait (&comp->messages_cond, &comp->messages_lock);
         signalled = TRUE;
       } else {
